Closed
Bug 353420
Opened 19 years ago
Closed 19 years ago
[@ PrintWinURI] inverted null check either crashes or errors
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: db48x)
References
(Blocks 1 open bug, )
Details
(Keywords: coverity, crash)
Crash Data
Attachments
(1 file)
|
527 bytes,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
| Assignee | ||
Comment 1•19 years ago
|
||
might as well just fix it
Assignee: general → db48x
Status: NEW → ASSIGNED
Attachment #239275 -
Flags: superreview?(jst)
Attachment #239275 -
Flags: review?(mrbkap)
Comment 2•19 years ago
|
||
Comment on attachment 239275 [details] [diff] [review]
353420-1.diff
r+sr=jst, thanks for fixing!
Attachment #239275 -
Flags: superreview?(jst)
Attachment #239275 -
Flags: superreview+
Attachment #239275 -
Flags: review?(mrbkap)
Attachment #239275 -
Flags: review+
| Assignee | ||
Comment 3•19 years ago
|
||
checked in to the trunk
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•19 years ago
|
Flags: in-testsuite-
Updated•15 years ago
|
Crash Signature: [@ PrintWinURI]
Updated•8 years ago
|
Blocks: coverity-analysis
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•