bug 353420: [@ PrintWinURI] inverted null check either crashes or errors r+sr=jst